--- a/scss/utility/_index.scss
+++ b/scss/utility/_index.scss
@@ -7,7 +7,7 @@
 @forward "convert";
 @forward "flex-center";
 @forward "flex-row-container";
-@forward "hero-image";
+@forward "hero-image-background";
 @forward "margin-x-center";
 @forward "rounded-corners";
 @forward "short-horizontal-line";
