--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -51,8 +51,7 @@
 
         // generate icon after the text
         &::after {
-            @include icons.icon;
-            content: icons.icon-unicode-from-name("right-arrow");
+            @include icons.icon(icons.icon-unicode-from-name("right-arrow"));
             font-size: 0.75em;
             padding-left: 0.3rem;
         }
