--- a/scss/utility/_add-if-possible.scss
+++ b/scss/utility/_add-if-possible.scss
@@ -1,6 +1,6 @@
 @use "sass:math";
 
-// if their units are compatible, add $a and $b.
+// if their units are compatible, add arguments.
 // if they're not compatible, return $a unaltered.
 @function add-if-possible($a, $b) {
     @if (math.compatible($a, $b)) {
